--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/cli-platform-android": "^4.13.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.10.5",
+    "@react-navigation/compat": "^5.3.5",
+    "@react-navigation/native": "^5.8.4",
+    "@react-navigation/stack": "^5.12.2",
+    "axios": "^0.21.0",
+    "jetifier": "^1.6.6",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -21,6 +35,7 @@
     "eslint": "^7.12.1",
     "jest": "^26.6.1",
     "metro-react-native-babel-preset": "^0.63.0",
+    "metro-react-native-babel-transformer": "^0.63.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
