--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.10.5",
     "@react-navigation/compat": "^5.3.5",
+    "@react-navigation/drawer": "^5.10.6",
     "@react-navigation/native": "^5.8.4",
     "@react-navigation/stack": "^5.12.2",
     "axios": "^0.21.0",
@@ -25,7 +26,10 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.12.0"
+    "react-native-screens": "^2.12.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
